Fixed yearly attendance

--- a/firebase/public/views/scheduling_dashboard.html
+++ b/firebase/public/views/scheduling_dashboard.html
@@ -40,7 +40,7 @@
 						<div class='row no-padding'>
 							<em class='fa fa-xl fa-line-chart color-red'>&nbsp;</em>
 							<div class='large num_current_attendance'>...</div>
-							<div class='text-muted'>Current Total Attendance</div>
+							<div class='text-muted'>Yearly Total Attendance</div>
 						</div>
 					</div>
 				</div>
