--- a/firebase/public/views/dashboard.html
+++ b/firebase/public/views/dashboard.html
@@ -22,7 +22,7 @@
 						<div class='row no-padding'>
 							<em class='fa fa-xl fa-calendar color-orange'>&nbsp;</em>
 							<div class='large num_upcoming_events'>...</div>
-							<div class='text-muted'>Upcoming Shows</div>
+							<div class='text-muted'>Upcoming Events</div>
 						</div>
 					</div>
 				</div>
