--- a/firebase/public/views/addPaymentView.html
+++ b/firebase/public/views/addPaymentView.html
@@ -1,14 +1,23 @@
 <script type='text/html' id='addpayment-template'>
 
-	<div class="modal fade" tabindex="-1" role="dialog" data-backdrop='false'>
-	  <div class="modal-dialog modal-lg" role="document">
-		<div class="modal-content">
-		  <div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			<h4 class="modal-title">Add Payment</h4>
-		  </div>
+	<div class='row' style='margin-bottom: 10px'>
+		<div class='col-md-3'>
+			Date Paid: <input type='date' id='payment_date'>
 		</div>
-	  </div>
+		<div class='col-md-3'>
+			Amount Paid: <input type='number' id='payment_amouht'>
+		</div>
+		<div class='col-md-3'>
+			Payment Type: <select id='payment_type'>
+				<option value='Cash'>Cash</option>
+				<option value='Check'>Check</option>
+				<option value='Credit'>Credit</option>
+				<option value='Interdepartment'>Interdepartment</option>
+			</select>
+		</div>
+		<div class='col-md-3'>
+			<button class='btn btn-primary' id='savePayment'>Save</button>
+		</div>
 	</div>
 
 </script>
