--- a/firebase/public/views/addPaymentView.html
+++ b/firebase/public/views/addPaymentView.html
@@ -5,7 +5,7 @@
 			Date Paid: <input type='date' id='payment_date'>
 		</div>
 		<div class='col-md-3'>
-			Amount Paid: <input type='number' id='payment_amouht'>
+			Amount Paid: <input type='number' id='payment_amount'>
 		</div>
 		<div class='col-md-3'>
 			Payment Type: <select id='payment_type'>
