Something happend, idk what

--- a/firebase/public/views/event_list_item.html
+++ b/firebase/public/views/event_list_item.html
@@ -1,4 +1,4 @@
-<script type='text/tepmlate' id='event-list-item-view'>
+<script type='text/template' id='event-list-item-view'>
 
 	<div class='event-item'>
 		<h4><%- group.groupName %> - <%- event.calEvent.string %></h4>
