--- a/firebase/public/views/event_detail_view.html
+++ b/firebase/public/views/event_detail_view.html
@@ -115,7 +115,7 @@
           			<p class='invoice_status'></p>
           		</div>
           	</div>
-          	<p><button class='btn btn-info edit-event' role='button'><em class='fa fa-pencil'>&nbsp;</em> Edit</button> <button class='btn btn-danger delete-event' role='button'><em class='fa fa-trash'>&nbsp;</em> Delete</button> <button class='btn btn-primary event-invoice' role='button'>Create Invoice</button> <button class='btn btn-warning event-payment'>Add Payment</button> <%if (event.finished === false) { %><button class='btn btn-success event-presented'>Show Presented</button><% } %></p>
+          	<p><button class='btn btn-info edit-event' role='button'><em class='fa fa-pencil'>&nbsp;</em> Edit</button> <button class='btn btn-danger delete-event' role='button'><em class='fa fa-trash'>&nbsp;</em> Delete</button> <button class='btn btn-primary event-invoice' role='button'>Create Invoice</button> <button class='btn btn-warning event-payment'>Payments</button> <%if (event.finished === false) { %><button class='btn btn-success event-presented'>Show Presented</button><% } %></p>
             <div class='payments_land'>
             </div>
           	<div class='aux-events-land'>
