--- a/firebase/public/views/accounting_dashboard.html
+++ b/firebase/public/views/accounting_dashboard.html
@@ -6,49 +6,9 @@
 				<h1 class='page-header'>Accounting Dashboard</h1>
 			</div>
 		</div>
-		<div class='panel panel-container'>
-			<div class='row no-padding'>
-				<div class='col-xs-6 col-md-3 col-lg-3 no-padding'>
-					<div class='panel panel-teal panel-widget border-right'>
-						<div class='row no-padding'>
-							<em class='fa fa-xl fa-calendar color-blue'>&nbsp;</em>
-							<div class='large num_groups'>10/10/2017</div>
-							<div class='text-muted'>Deposit Period</div>
-						</div>
-					</div>
-				</div>
-				<div class='col-xs-6 col-md-3 col-lg-3 no-padding'>
-					<div class='panel panel-teal panel-widget border-right'>
-						<div class='row no-padding'>
-							<em class='fa fa-xl fa-hand-spock-o color-orange'>&nbsp;</em>
-							<div class='large num_upcoming_events'>$0</div>
-							<div class='text-muted'>Cash on Hand</div>
-						</div>
-					</div>
-				</div>
-				<div class='col-xs-6 col-md-3 col-lg-3 no-padding'>
-					<div class='panel panel-teal panel-widget border-right'>
-						<div class='row no-padding'>
-							<em class='fa fa-xl fa-calendar-minus-o color-teal'>&nbsp;</em>
-							<div class='large num_projects'>11</div>
-							<div class='text-muted'>Previous unpaid events</div>
-						</div>
-					</div>
-				</div>
-				<div class='col-xs-6 col-md-3 col-lg-3 no-padding'>
-					<div class='panel panel-teal panel-widget border-right'>
-						<div class='row no-padding'>
-							<em class='fa fa-xl fa-money color-red'>&nbsp;</em>
-							<div class='large num_incomplete_tasks'>$28,000</div>
-							<div class='text-muted'>Total income (year)</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
 		<div class='row'>
 			<div class='col-md-12'>
-				<button class='btn btn-primary reload_graphs' role='button'>Reload graphs</button> <button class='btn btn-success' role='button'>Create deposit</button><br /><br />
+				<button class='btn btn-primary reload_graphs' role='button'>Reload graphs</button> <button class='btn btn-success create-deposit' role='button'>Create deposit</button><br /><br />
 			</div>
 		</div>
 		<div class='row'>
