--- a/firebase/public/views/event_detail_view.html
+++ b/firebase/public/views/event_detail_view.html
@@ -1,6 +1,6 @@
 <script type='text/template' id='event-detail-view'>
 
-    <div class="modal fade" tabindex="-1" role="dialog" data-backdrop='false'>
+    <div class="modal" tabindex="-1" role="dialog" data-backdrop='false'>
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
