--- a/firebase/public/views/transaction_view.html
+++ b/firebase/public/views/transaction_view.html
@@ -1,10 +1,10 @@
 <script type='text/template' id='transaction-view'>
 
-	<div class="modal fade" tabindex="-1" role="dialog" data-backdrop='false'>
+	<div class="modal" tabindex="-1" role="dialog" data-backdrop='false'>
 		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<button type="button" class="close remove-modal" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 					<h4 class="modal-title">Transaction</h4>
 				</div>
 				<div class="modal-body">
@@ -51,9 +51,9 @@
 							</div>
 						</div>
 					</div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default remove-view" data-dismiss="modal">Close</button>
-          </div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default remove-modal" data-dismiss="modal">Close</button>
 				</div>
 			</div>
 		</div>	
