Added ability to add new users

--- a/firebase/public/views/user_settings.html
+++ b/firebase/public/views/user_settings.html
@@ -10,5 +10,6 @@
 	</div>
 	<hr />
 	<button class='btn btn-primary change-password'>Change Password</button>
+	<button class='btn btn-primary add-user'>Add new user</button>
 
 </script>
