Added event validation, event searching, & small UI changes

--- a/firebase/public/views/event_detail_view.html
+++ b/firebase/public/views/event_detail_view.html
@@ -55,7 +55,7 @@
           			<p>Work Phone: <input type='text' class='workPhone' value='<%- group.workPhone %>'></p>
           		</div>
           	</div>
-          	<p><button class='btn btn-info edit-group' role='button'><em class='fa fa-pencil'>&nbsp;</em> Edit</button> <button class='btn btn-info view-all-events' role='button'><em class='fa fa-calendar'>&nbsp;</em> View all events</button></p>
+          	<p><button class='btn btn-info edit-group' role='button'><em class='fa fa-pencil'>&nbsp;</em> Edit</button> <button class='btn btn-info view-all-events' role='button'><em class='fa fa-calendar'>&nbsp;</em> View all events</button> <!--<button class='btn btn-success create-new-event' role='button'><em class='fa fa-plus'>&nbsp;</em>Create new event</button>--></p>
           	<hr />
           	<h3>Event</h3>
           	<div class='row event static'>
