--- a/firebase/public/views/event_view.html
+++ b/firebase/public/views/event_view.html
@@ -13,7 +13,7 @@
 						Events
 					</div>
 					<div class='panel-body'>
-						<button class='btn btn-success event-search-click' role='button'><em class='fa fa-search'>&nbsp;</em> Search for events</button> <button class='btn btn-primary create-event-click' role='button'><em class='fa fa-plus'>&nbsp;</em> Create Event</button><br /><hr />
+						<b>Search:</b> <input type='text' class='search-event-val' /> <button class='btn btn-primary create-event-click' role='button'><em class='fa fa-plus'>&nbsp;</em> Create Event</button><br /><hr />
 						<div class='events-landing'>
 						</div>
 					</div>
