--- a/firebase/public/views/new_event.html
+++ b/firebase/public/views/new_event.html
@@ -69,7 +69,7 @@
                 </div>
               </div>
               <br />
-              <button class='btn btn-primary select-date-click'>Next</button>
+              <button class='btn btn-primary select-date-click' disabled>Next</button>
             </div>
             <div class='show-details create-event-option'>
               <h3>Show Details</h3>
