--- a/firebase/public/views/sidebar.html
+++ b/firebase/public/views/sidebar.html
@@ -20,7 +20,7 @@
 						<a href='#'><em class='fa fa-calendar'>&nbsp;</em> Events</a>
 					</li>
 					<li id='scheduling_group_click'>
-						<a href='#'><em class='fa fa-users'>&nbsp;</em> Groups</a>
+						<a href='#'><em class='fa fa-users'>&nbsp;</em> Repeat Groups</a>
 					</li>
 				</ul>
 			</li>
@@ -37,9 +37,6 @@
 						<a href='#'><em class='fa fa-money'>&nbsp;</em> Payments</a>
 					</li>
 				</ul>
-			</li>
-			<li class='project_view'>
-				<a href='#'><em class="fa fa-book" aria-hidden="true">&nbsp;</em> Projects</a>
 			</li>
 			<li id='settings_view'>
 				<a href='#'><em class="fa fa-cogs" aria-hidden="true">&nbsp;</em> Settings</a>
