--- a/firebase/public/views/transaction_view.html
+++ b/firebase/public/views/transaction_view.html
@@ -47,7 +47,7 @@
 								</select>
 							</div>
 							<div class='col-md-3'>
-								<button class='btn btn-primary' id='savePayment'>Save</button>
+								<button class='btn btn-primary' id='savePayment' disabled>Save</button>
 							</div>
 						</div>
 					</div>
