--- a/firebase/public/views/event_aux_view.html
+++ b/firebase/public/views/event_aux_view.html
@@ -1,58 +1,67 @@
 <script type='text/template' id='event-aux-view'>
 
-	<hr />
-    	<div class='row event static'>
-    		<div class='col-md-4'>
-    			<p>Date: <b><%- calEvent.date.string %></b></p>
-    		</div>
-    		<div class='col-md-4'>
-    			<p>Start Time: <b><%- calEvent.startTime.string %></b></p>
-    		</div>
-    		<div class='col-md-4'>
-    			<p>End Time: <b><%- calEvent.endTime.string %></b></p>
-    		</div>
-    		<div class='col-md-4'>
-    			<p>Show: <b><%- show %></b></p>
-    		</div>
-    		<div class='col-md-4'>
-    			<p>Activity: <b><%- activity %></b></p>
-    		</div>
-    		<div class='col-md-4'>
-    			<p>Presenter: <b><%- presenter %></b></p>
-    		</div>
-    		<div class='col-md-4'>
-    			<p>Price: <b>$<%- price %></b></p>
-    		</div>
-            <div class='col-md-4'>
-              <p>Number of People: <b><%- numOfPeople %></b></p>
-            </div>
-    	</div>
-    	<div class='row event edit'>
-    		<div class='col-md-4'>
-    			<p>Date: <input type='date' class='date' value='<%- calEvent.date.iso %>'></p>
-    		</div>
-    		<div class='col-md-4'>
-    			<p>Start Time: <input type='time' class='startTime' value='<%- calEvent.startTime.raw %>'></p>
-    		</div>
-    		<div class='col-md-4'>
-    			<p>End Time: <input type='time' class='endTime' value='<%- calEvent.endTime.raw %>'></p>
-    		</div>
-    		<div class='col-md-4'>
-    			<p>Show: <input type='text' class='show' value='<%- show %>'></p>
-    		</div>
-    		<div class='col-md-4'>
-    			<p>Activity: <input type='text' class='activity' value='<%- activity %>'></p>
-    		</div>
-    		<div class='col-md-4'>
-    			<p>Presenter: <input type='text' class='presenter' value='<%- presenter %>'></p>
-    		</div>
-    		<div class='col-md-4'>
-    			<p>Price: <input type='number' class='price' value='<%- price %>'></p>
-    		</div>
-      	  	<div class='col-md-4'>
-        		<p>Number of People: <input type='number' class='numOfPeople' value='<%- numOfPeople %>'></p>
-      	  	</div>
-    	</div>
-    	<p><button class='btn btn-info edit-event<%- _id %>' role='button'><em class='fa fa-pencil'>&nbsp;</em> Edit</button> <button class='btn btn-danger delete-event<%- _id %>' role='button'><em class='fa fa-trash'>&nbsp;</em> Delete</button> <button class='btn btn-primary event-invoice' role='button'>Create Invoice</button> <button class='btn btn-warning event-payment' disabled="disabled">Add Payment</button> <button class='btn btn-success event-presented' disabled="disabled">Show Presented</button></p>
-
+  <hr />
+    <div class='row event static'>
+      <div class='col-md-4'>
+        <p>Date: <b><%- event.calEvent.date.string %></b></p>
+      </div>
+      <div class='col-md-4'>
+        <p>Start Time: <b><%- event.calEvent.startTime.string %></b></p>
+      </div>
+      <div class='col-md-4'>
+        <p>End Time: <b><%- event.calEvent.endTime.string %></b></p>
+      </div>
+      <div class='col-md-4'>
+        <p>Show: <b><%- event.show %></b></p>
+      </div>
+      <div class='col-md-4'>
+        <p>Activity: <b><%- event.activity %></b></p>
+      </div>
+      <div class='col-md-4'>
+        <p>Presenter: <b><%- event.presenter %></b></p>
+      </div>
+      <div class='col-md-4'>
+        <p>Price: <b>$<%- event.price %></b></p>
+      </div>
+          <div class='col-md-4'>
+            <p>Number of People: <b><%- event.numOfPeople %></b></p>
+          </div>
+    </div>
+    <div class='row event edit'>
+      <div class='col-md-4'>
+        <p>Date: <input type='date' class='date' value='<%- event.calEvent.date.iso %>'></p>
+      </div>
+      <div class='col-md-4'>
+        <p>Start Time: <input type='time' class='startTime' value='<%- event.calEvent.startTime.raw %>'></p>
+      </div>
+      <div class='col-md-4'>
+        <p>End Time: <input type='time' class='endTime' value='<%- event.calEvent.endTime.raw %>'></p>
+      </div>
+      <div class='col-md-4'>
+        <p>Show: <input type='text' class='show' value='<%- event.show %>'></p>
+      </div>
+      <div class='col-md-4'>
+        <p>Activity: <input type='text' class='activity' value='<%- event.activity %>'></p>
+      </div>
+      <div class='col-md-4'>
+        <p>Presenter: <input type='text' class='presenter' value='<%- event.presenter %>'></p>
+      </div>
+      <div class='col-md-4'>
+        <p>Price: <input type='number' class='price' value='<%- event.price %>'></p>
+      </div>
+      <div class='col-md-4'>
+        <p>Number of People: <input type='number' class='numOfPeople' value='<%- event.numOfPeople %>'></p>
+      </div>
+    </div>
+    <div class='row'>
+      <div class='col-md-12'>
+        <p class='invoice_status'></p>
+      </div>
+    </div>
+    <p><button class='btn btn-info edit-event' role='button'><em class='fa fa-pencil'>&nbsp;</em> Edit</button> <button class='btn btn-danger delete-event' role='button'><em class='fa fa-trash'>&nbsp;</em> Delete</button> <button class='btn btn-success duplicate-event'><em class='fa fa-clone'>&nbsp;</em> Duplicate</button> <button class='btn btn-primary event-invoice' role='button'>Create Invoice</button> <button class='btn btn-warning event-payment'>Payments</button> <%if (event.finished === false) { %><button class='btn btn-success event-presented'>Show Presented</button><% } %></p>
+    <div class='payments_land'>
+    </div>
+    
+    <div class='new_event_form_landing' style="display:none"></div>
+    
 </script>
