--- a/firebase/public/views/event_detail_view.html
+++ b/firebase/public/views/event_detail_view.html
@@ -55,71 +55,19 @@
           			<p>Work Phone: <input type='text' class='workPhone' value='<%- group.workPhone %>'></p>
           		</div>
           	</div>
-          	<p><button class='btn btn-info edit-group' role='button'><em class='fa fa-pencil'>&nbsp;</em> Edit</button> <button class='btn btn-info view-all-events' role='button'><em class='fa fa-calendar'>&nbsp;</em> View all events</button> <!--<button class='btn btn-success create-new-event' role='button'><em class='fa fa-plus'>&nbsp;</em>Create new event</button>--></p>
-          	<hr />
-          	<h3>Event</h3>
-          	<div class='row event static'>
-          		<div class='col-md-4'>
-          			<p>Date: <b><%- event.calEvent.date.string %></b></p>
-          		</div>
-          		<div class='col-md-4'>
-          			<p>Start Time: <b><%- event.calEvent.startTime.string %></b></p>
-          		</div>
-          		<div class='col-md-4'>
-          			<p>End Time: <b><%- event.calEvent.endTime.string %></b></p>
-          		</div>
-          		<div class='col-md-4'>
-          			<p>Show: <b><%- event.show %></b></p>
-          		</div>
-          		<div class='col-md-4'>
-          			<p>Activity: <b><%- event.activity %></b></p>
-          		</div>
-          		<div class='col-md-4'>
-          			<p>Presenter: <b><%- event.presenter %></b></p>
-          		</div>
-          		<div class='col-md-4'>
-          			<p>Price: <b>$<%- event.price %></b></p>
-          		</div>
-                  <div class='col-md-4'>
-                    <p>Number of People: <b><%- event.numOfPeople %></b></p>
-                  </div>
-          	</div>
-          	<div class='row event edit'>
-          		<div class='col-md-4'>
-          			<p>Date: <input type='date' class='date' value='<%- event.calEvent.date.iso %>'></p>
-          		</div>
-          		<div class='col-md-4'>
-          			<p>Start Time: <input type='time' class='startTime' value='<%- event.calEvent.startTime.raw %>'></p>
-          		</div>
-          		<div class='col-md-4'>
-          			<p>End Time: <input type='time' class='endTime' value='<%- event.calEvent.endTime.raw %>'></p>
-          		</div>
-          		<div class='col-md-4'>
-          			<p>Show: <input type='text' class='show' value='<%- event.show %>'></p>
-          		</div>
-          		<div class='col-md-4'>
-          			<p>Activity: <input type='text' class='activity' value='<%- event.activity %>'></p>
-          		</div>
-          		<div class='col-md-4'>
-          			<p>Presenter: <input type='text' class='presenter' value='<%- event.presenter %>'></p>
-          		</div>
-          		<div class='col-md-4'>
-          			<p>Price: <input type='number' class='price' value='<%- event.price %>'></p>
-          		</div>
-              	  	<div class='col-md-4'>
-                		<p>Number of People: <input type='number' class='numOfPeople' value='<%- event.numOfPeople %>'></p>
-              	  	</div>
-          	</div>
-          	<div class='row'>
-          		<div class='col-md-12'>
-          			<p class='invoice_status'></p>
-          		</div>
-          	</div>
-          	<p><button class='btn btn-info edit-event' role='button'><em class='fa fa-pencil'>&nbsp;</em> Edit</button> <button class='btn btn-danger delete-event' role='button'><em class='fa fa-trash'>&nbsp;</em> Delete</button> <button class='btn btn-primary event-invoice' role='button'>Create Invoice</button> <button class='btn btn-warning event-payment'>Payments</button> <%if (event.finished === false) { %><button class='btn btn-success event-presented'>Show Presented</button><% } %></p>
-            <div class='payments_land'>
-            </div>
-          	<div class='aux-events-land'>
-          	</div>
+            <p><button class='btn btn-info edit-group' role='button'><em class='fa fa-pencil'>&nbsp;</em> Edit</button> <button class='btn btn-info view-all-events' role='button'><em class='fa fa-calendar'>&nbsp;</em> View all events</button> <button class='btn btn-success create-new-event' role='button'><em class='fa fa-plus plus-minus'>&nbsp;</em>Create new event</button></p>
+            
+            <p>
+              <div class="new-event-form-landing" style="display:none"></div>
+            </p>
+
+            <hr />
+
+            <p>
+              <h3>Events</h3>
+              <div class="aux-events-landing"></div>
+            </p>
+          	
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
