--- a/firebase/public/views/new_event.html
+++ b/firebase/public/views/new_event.html
@@ -37,9 +37,6 @@
                   <p>Group Type: <input type='text' class='groupType'></p>
                 </div>
                 <div class='col-md-4'>
-                  <p>Grade: <input type='text' class='grade'></p>
-                </div>
-                <div class='col-md-4'>
                   <p>Email: <input type='text' class='email'></p>
                 </div>
                 <div class='col-md-4'>
@@ -88,6 +85,12 @@
                 </div>
                 <div class='col-md-4'>
                   <p>Number of People: <input type='number' class='numOfPeople' value='<%- event.numOfPeople %>'></p>
+                </div>
+                <div class='col-md-4'>
+                  <p>Grade: <input type='text' class='grade' value='<%- event.grade %>'></p>
+                </div>
+                <div class='col-md-4'>
+                  <p>Age: <input type='text' class='age' value='<%- event.age %>'></p>
                 </div>
               </div>
               <br />
