--- a/firebase/public/views/new_event_form.html
+++ b/firebase/public/views/new_event_form.html
@@ -43,12 +43,22 @@
       <div class='col-md-4'>
         <p>Presenter: <input type='text' class='presenter' value='<%- event.presenter %>'></p>
       </div>
+    </div>
+    <div class="row">
       <div class='col-md-4'>
         <p>Price: <input type='number' class='price' value='<%- event.price %>'></p>
       </div>
       <div class='col-md-4'>
         <p>Number of People: <input type='number' class='numOfPeople' value='<%- event.numOfPeople %>'></p>
       </div>
+      <div class='col-md-4'>
+        <p>Grade: <input type='text' class='grade' value='<%- event.grade %>'></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class='col-md-4'>
+        <p>Age: <input type='text' class='age' value='<%- event.age %>'></p>
+      <div>
     </div>
     <br />
     <button class='btn btn-success confirm-event'><em class='fa fa-floppy-o'>&nbsp;</em> Save Event</button>
